--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "express": "~4.15.2",
     "hbs": "~4.0.1",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "log4js": "~1.1.1",
+    "sequelize": "^3.27.0",
+    "mysql": "^2.12.0",
+    "uuid": "^3.1.0",
+    "async": "~2.1.5",
+    "superagent": "^3.6.0",
+    "log4js":"^2.3.3"
   }
 }
