--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "uuid": "^3.1.0",
     "async": "~2.1.5",
     "superagent": "^3.6.0",
-    "log4js":"^2.3.3"
+    "log4js":"^2.3.3",
+    "cheerio":"^1.0.0-rc.2"
   }
 }
