--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "hbs": "~4.0.1",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
-    "log4js": "~1.1.1",
     "sequelize": "^3.27.0",
     "mysql": "^2.12.0",
     "uuid": "^3.1.0",
     "async": "~2.1.5",
     "superagent": "^3.6.0",
     "log4js":"^2.3.3",
-    "cheerio":"^1.0.0-rc.2"
+    "cheerio":"^1.0.0-rc.2",
+    "node-xlsx":"~0.11.0",
+    "ursa":"~0.9.4",
+    "amqp": "^0.2.6"
   }
 }
