--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "log4js":"^2.3.3",
     "cheerio":"^1.0.0-rc.2",
     "node-xlsx":"~0.11.0",
-    "ursa":"~0.9.4",
-    "amqp": "^0.2.6"
+    "amqp": "^0.2.6",
+    "node-schedule": "^1.2.4",
+    "MD5":"^1.3.0"
   }
 }
