--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "uuid": "^3.1.0",
     "async": "~2.1.5",
     "superagent": "^3.6.0",
-    "log4js":"^2.3.3",    //https://nomiddlename.github.io/log4js-node/appenders.html
+    "log4js":"^2.3.3",
     "cheerio":"^1.0.0-rc.2",
     "node-xlsx":"~0.11.0",
     "amqp": "^0.2.6",
     "node-schedule": "^1.2.4",
-    "md5":"^2.2.1"
+    "md5":"^2.2.1",
+    "socket.io": "^2.0.3"
   }
 }
